# Decoder

./: README.md
src/: CMakeLists.txt  kernelfunc.cl  main.cpp
